syntax = "proto3";

option go_package = "Sisconn-raft/raft/raftpc";

// package raftpc.proto;

service Raft {
    rpc AppendEntries (AppendEntriesArg) returns (AppendResult);
    rpc RequestVote (RequestVoteArg) returns (VoteResult);
}

message AppendEntriesArg {
    uint64 term = 1;
    string leaderId = 2;
    uint64 prevLogIndex = 3;

    uint64 prevLogTerm = 4;
    repeated LogEntry logEntries = 5;

    uint64 leaderCommit = 6;

    uint64 logType = 7;
}

message LogEntry {
    uint64 term = 1;
    string key = 2;
    string value = 3;
}

message AppendResult {
    uint64 term = 1;
    bool success = 2;
}

message RequestVoteArg {
    uint64 term = 1;
    string candidateId = 2;
    // last log index for each logs
    map<uint32, uint64> lastLogIndex = 3;
    uint64 lastLogTerm = 4;
}

message VoteResult {
    uint64 term = 1;
    bool voteGranted = 2;
}